<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/left_par"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:contentDescription="@string/left_par"
            android:text="@string/left_parentheses"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/midnight_green"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/right_par"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:contentDescription="@string/right_par"
            android:text="@string/right_parentheses"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/midnight_green"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/metallic_seaweed"
            android:contentDescription="@string/cancel_equation"
            android:text="@string/cancel"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/midnight_green"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:contentDescription="@string/backspace"
            android:foreground="@drawable/ic_backspace_24px"
            android:foregroundGravity="center_vertical|center_horizontal"
            app:backgroundTint="@color/midnight_green"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/seven"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/eight"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/nine"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/queen_blue"
            android:contentDescription="@string/divide"
            android:text="@string/divide_text"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/queen_blue"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/five"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/four"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/six"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/queen_blue"
            android:contentDescription="@string/multiply"
            android:text="@string/multiply_text"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/queen_blue"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/one"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/three"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/two"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/queen_blue"
            android:contentDescription="@string/subtract"
            android:text="@string/dash"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/queen_blue"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/val0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/midnight_green"
            android:text="@string/zero"
            android:textSize="@dimen/number_size"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/queen_blue"
            android:contentDescription="@string/decimal_point"
            android:text="@string/dot"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/queen_blue"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/queen_blue"
            android:contentDescription="@string/add"
            android:text="@string/plus"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/queen_blue"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/fiery_rose"
            android:contentDescription="@string/equals"
            android:text="@string/equals_sign"
            android:textSize="@dimen/number_size"
            app:backgroundTint="@color/fiery_rose"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>